--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ChemPro Header with Logo and Bootstrap Icons</title>
+    <!-- Link Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="example.css">
+</head>
+<body>
+    <header>
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="your-logo.png" alt="Site Logo" class="site-logo">
+                <span class="logo-text">ChemPro</span>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Хайх">
+                <button class="search-button">
+                    <!-- Bootstrap search icon -->
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
+            <div class="user-options">
+                <button class="register-btn">Бүртгүүлэх</button>
+                <button class="login-btn">Нэвтрэх</button>
+            </div>
+        </div>
+    </header>
+</body>
+</html>
 
