--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChemPro Header with Logo and Bootstrap Icons</title>
-    <!-- Link Bootstrap Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="example.css">
+    <title>Chemistry E-Learning</title>
+    <link rel="stylesheet" href="style-main.css"> <!-- Link to your CSS file -->
 </head>
 <body>
+
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <img src="your-logo.png" alt="Site Logo" class="site-logo">
+                <img src="some-logo.png" alt="logo" class="site-logo">
                 <span class="logo-text">ChemPro</span>
             </div>
             <div class="search-bar">
                 <input type="text" placeholder="Хайх">
                 <button class="search-button">
-                    <!-- Bootstrap search icon -->
                     <i class="bi bi-search"></i>
                 </button>
             </div>
@@ -28,6 +26,54 @@
             </div>
         </div>
     </header>
+
+    <!-- Main Title Section -->
+    <div class="main-title">
+        <h1>Welcome to Chemistry Class</h1>
+        <!-- Right-aligned image next to the title -->
+        <img src="chemistry-logo.png" alt="Chemistry Logo">
+    </div>
+
+    <!-- Info Segment 1: Introduction -->
+    <section class="info-segment" id="home">
+        <h2>Introduction</h2>
+        <p>Our platform is designed to help you master the basics of chemistry through interactive lessons, quizzes, and fun experiments.</p>
+    </section>
+
+    <!-- Info Segment 2: Lessons -->
+    <section class="info-segment" id="lessons">
+        <h2>Lessons</h2>
+        <p>Dive into our comprehensive lessons covering topics like the periodic table, chemical reactions, and atomic structure. Each lesson includes visual aids and practice problems.</p>
+    </section>
+
+    <!-- Info Segment 3: Quizzes -->
+    <section class="info-segment" id="quizzes">
+        <h2>Quizzes</h2>
+        <p>Test your knowledge with our quizzes. Challenge yourself and track your progress as you go from beginner to expert.</p>
+    </section>
+
+    <!-- Info Segment 4: About Us -->
+    <section class="info-segment" id="about">
+        <h2>About Us</h2>
+        <p>We are a team of educators passionate about making chemistry fun and accessible to students everywhere. Our goal is to inspire the next generation of scientists.</p>
+    </section>
+
+    <!-- New Segment: Teacher Information -->
+    <section class="info-segment" id="teacher-info">
+        <h2>Teacher Information</h2>
+        <p>Meet your instructors! All of our teachers have years of experience teaching chemistry and are here to help you succeed. Feel free to reach out to them for guidance.</p>
+    </section>
+
+    <!-- New Segment: FAQ -->
+    <section class="info-segment" id="faq">
+        <h2>Frequently Asked Questions</h2>
+        <p>Have questions? Check out our FAQ section for answers to common questions about the platform, lessons, and more!</p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Chemistry E-Learning Platform. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
-
